# auto-trader

./: AGENTS.md  Cargo.toml  README.md  session.json  test_encode  test_encode.js  test_encode.rs  test_epoch.rs  test_loop  test_loop.rs  test_parse.rs
.github/workflows/: release-server.yml
backend/: session.json  trades.db
backend/kotak_client/: Cargo.toml
backend/kotak_client/src/: client.rs  error.rs  lib.rs  websocket.rs
backend/server/: Cargo.toml  update.sh
backend/server/src/: db.rs  main.rs
backend/server/src/routes/: auth_kotak.rs  auth_telegram.rs  health.rs  mod.rs  portfolio.rs  positions.rs  settings.rs
backend/shared_domain/: Cargo.toml
backend/shared_domain/src/: lib.rs
backend/telegram_ingester/: Cargo.toml
backend/telegram_ingester/src/: lib.rs  manager.rs  parser.rs  session_file.rs  stream.rs
backend/trading_engine/: Cargo.toml
backend/trading_engine/src/: fees.rs  lib.rs  monitor.rs  scrip_master.rs
frontend/: package.json  pnpm-lock.yaml  vite.config.ts
frontend/src/: App.tsx  index.css
kotak-api-docs/: authentication.md  curl-examples.md  getting-started.md  holdings.md  instruments-scrip-master.md  limits.md  margins.md  neo-websocket.md  positions.md  quotes.md  trading-apis.md  troubleshooting.md
kotak-bridge/: index.js  package-lock.json  package.json  test_load.js  test_sub.js
shared_domain/: Cargo.toml
